--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "Lucky Numbers",
     "slug": "lucky-numbers",
+    "description": "Designed for entertainment — perfect for number inspiration, lucky draws, or just for fun",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
